modify icon and edit style

--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -10,6 +10,7 @@
         <meta name="keywords" content="何野夫,个人博客,Django,python,bootstrap">
         <meta name="description" content="何野夫的个人博客,使用Django2.0.3+Python3.6.3+Bootstrap4编写">
         <title>何野夫</title>
+        <link rel="shortcut icon" href="{% static 'img/heyefu.ico' %}">
         <link rel="stylesheet" href="{% static 'bootstrap4/css/bootstrap.min.css' %}">
         <link rel="stylesheet" href="{% static 'css/index.css' %}">
         <script src="{% static 'js/jquery-3.3.1.min.js' %}"></script>
