--- a/blog/templates/blog/article_details.html
+++ b/blog/templates/blog/article_details.html
@@ -4,56 +4,7 @@
 
 {% block extracss %}
         <link rel="stylesheet" href="{% static 'css/highlight.css' %}">
-
-
-        <style type="text/css">
-    .input-head-pic{
-        opacity: 0;
-    }
-    .head-pic-span{
-        display: block;
-        width: 100px;
-        height: 100px;
-        overflow: hidden;
-        border-radius: 50%;
-        border: 3px solid #eee;
-    }
-    .head-pic-priview{
-        width: 100%;
-        height: 100%;
-    }
-    .btn-green{
-        display: block;
-        height: 35px;
-        line-height: 35px;
-        text-align: center;
-        text-indent: 0;
-        color: #fff;
-        background-color: #717171;
-    }
-    .btn-upload{
-        display: hidden;
-        opacity: 0;
-    }
-    .setting-head{
-        background-color: #f8f8f8;
-    }
-    .border{
-        border: 1px solid #eaeaea;
-    }
-    .margin-center{
-        margin:0 auto;
-    }
-    .margin-top{
-        margin-top: 2rem;
-    }
-    .padding-samll{
-        padding: 1rem;
-    }
-    .border-tint{
-        border-color: #b3bcc6;
-    }
-</style>
+        <link rel="stylesheet" type="text/css" href="{% static 'css/article.css' %}">
 {% endblock extracss %}
 
 {% block content %}
@@ -96,8 +47,14 @@
             <a class="a-hover p-2" href="#">{{ article.category }}</a>
             <span class="p-2">{{ article.created_time }}</span>
             {% if user == article.author %}
-            <a class="a-hover ml-auto p-2" href="{% url 'blog:edit_article' article.id %}">{% trans 'Edit' %}</a>
-            <a class="a-hover p-2" href="#">{% trans 'Delete' %}</a>
+            <a class="a-hover ml-auto p-2 edit-icon" href="{% url 'blog:edit_article' article.id %}">
+                <img src="{% static 'img/svg/edit.svg' %}" class="icon-sm">
+                {% trans 'Edit' %}
+            </a>
+            <a class="a-hover p-2" href="#">
+                <img src="{% static 'img/svg/delete.svg' %}" class="icon-sm">
+                {% trans 'Delete' %}
+            </a>
             {% endif %}
         </div>
         <div class="dropdown-divider"></div>
