--- a/users/templates/users/setting.html
+++ b/users/templates/users/setting.html
@@ -5,54 +5,8 @@
 
 
 {% block extracss %}
+<link rel="stylesheet" type="text/css" href="{% static 'css/article.css' %}">
 <script src="{% static '/js/jquery.form.js' %}"></script>
-<style type="text/css">
-    .input-head-pic{
-        opacity: 0;
-    }
-    .head-pic-span{
-        display: block;
-        width: 100px;
-        height: 100px;
-        overflow: hidden;
-        border-radius: 50%;
-        border: 3px solid #eee;
-    }
-    .head-pic-priview{
-        width: 100%;
-        height: 100%;
-    }
-    .btn-green{
-        display: block;
-        height: 35px;
-        line-height: 35px;
-        text-align: center;
-        text-indent: 0;
-        color: #fff;
-        background-color: #717171;
-    }
-    .btn-upload{
-        display: hidden;
-        opacity: 0;
-    }
-    .setting-head{
-        background-color: #f8f8f8;
-    }
-    .border{
-        border: 1px solid #eaeaea;
-    }
-    .margin-center{
-        margin:0 auto;
-    }
-    .margin-top{
-        margin-top: 3rem;
-    }
-    .padding-samll{
-        padding: 1rem;
-    }
-</style>
-
-
 {% endblock extracss %}
 
 
