--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -24,11 +24,18 @@
             <nav class="navbar navbar-expand-sm navbar-dark bg-dark fixed-top">
             <div class="container">
                 <!-- navbar header start -->
-                <div class="navbar-header">
+                <div>
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                     <a class="navbar-brand" href="{% url 'blog:index' %}">{% trans 'Myblog' %}</a>
                 </div>
                 <!-- navabar header over -->
+
+                <!-- Search start -->
+                <form class="form-inline">
+                        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="{% trans 'Search' %}">
+                        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">{% trans 'Search' %}</button>
+                </form>
+                <!-- end -->
 
                 <!-- navbar content start -->
                 <div id="navbar" class="collapse navbar-collapse justify-content-end">
