--- a/blog/templates/blog/new_article.html
+++ b/blog/templates/blog/new_article.html
@@ -21,14 +21,14 @@
                     <nav>
                       <div class="nav nav-tabs" id="nav-tab" role="tablist">
                         <a class="nav-item nav-link active" id="edit-article-tab" data-toggle="tab" href="#edit-article" role="tab" aria-controls="nav-edit-article" aria-selected="true">{% trans 'Edit new file' %}</a>
-                        <a class="nav-item nav-link" id="preview-aritcle-tab" data-toggle="tab" href="#preview-aritcle" role="tab" aria-controls="preview-aritcle" aria-selected="false">{% trans 'Preview' %}</a>
+                        <a class="nav-item nav-link" onclick="preview()" id="preview-aritcle-tab" data-toggle="tab" href="#preview-aritcle" role="tab" aria-controls="preview-aritcle" aria-selected="false">{% trans 'Preview' %}</a>
                       </div>
                     </nav>
                     <div class="tab-content" id="nav-tabContent">
                       <div class="tab-pane fade show active" id="edit-article" role="tabpanel" aria-labelledby="edit-article-tab">
                             <textarea name="body" class="form-control" role='tabpanel' required aria-labelledby="home-tab" id="id_body" rows="20"></textarea>
                       </div>
-                      <div class="tab-pane fade" id="preview-aritcle" role="tabpanel" aria-labelledby="preview-aritcle-tab"><h3>敬请期待...</h3></div>
+                      <div class="tab-pane fade" id="preview-aritcle" role="tabpanel" aria-labelledby="preview-aritcle-tab"></div>
                     </div>
                 </div>
                 <!-- end -->
@@ -62,4 +62,28 @@
             </form>
         </div>
     </div>
+    <script type="text/javascript">
+        
+        function preview(){
+            var body = $('#id_body').val();
+            $.ajax({
+                url: '{% url "blog:preview_article" %}',
+                type: 'POST',
+                data: {article_body: body, csrfmiddlewaretoken: '{{ csrf_token }}',},
+                dataType: 'json',
+                success: function(data){
+                    var preview = $('#preview-aritcle')
+                    preview.text('');
+                    preview.append(data.body);
+
+                },
+                error: function(data){
+                    console.log('error');
+                }
+            });
+        }
+    </script>
+
+
+
 {% endblock content %}
