--- a/blog/templates/blog/new_article.html
+++ b/blog/templates/blog/new_article.html
@@ -2,6 +2,11 @@
 {% load i18n %}
 {% load static %}
 
+{% block extracss %}
+<link rel="stylesheet" href="{% static 'css/highlight.css' %}">
+{% endblock extracss %}
+
+
 {% block content %}
     <div class="row">
         <div class="col-md-2">
