--- a/blog/templates/blog/article_details.html
+++ b/blog/templates/blog/article_details.html
@@ -3,8 +3,8 @@
 {% load static %}
 
 {% block extracss %}
-        <link rel="stylesheet" href="{% static 'css/highlight.css' %}">
-        <link rel="stylesheet" type="text/css" href="{% static 'css/article.css' %}">
+<link rel="stylesheet" href="{% static 'css/markdown.css' %}">
+<link rel="stylesheet" type="text/css" href="{% static 'css/article.css' %}">
 {% endblock extracss %}
 
 {% block content %}
@@ -59,7 +59,9 @@
         </div>
         <div class="dropdown-divider"></div>
         <!-- article title bar over -->
-        {{ article.body | safe }}
+        <div class="markdown-body">
+            {{ article.body | safe }}
+        </div>
     </div>
 </div>
 </div>
