--- a/blog/templates/blog/edit_article.html
+++ b/blog/templates/blog/edit_article.html
@@ -4,7 +4,7 @@
 
 
 {% block extracss %}
-<link rel="stylesheet" href="{% static 'css/highlight.css' %}">
+<link rel="stylesheet" href="{% static 'css/markdown.css' %}">
 {% endblock extracss %}
 
 {% block content %}
@@ -33,7 +33,7 @@
                       <div class="tab-pane fade show active" id="edit-article" role="tabpanel" aria-labelledby="edit-article-tab">
                             <textarea name="body" class="form-control" role='tabpanel' required aria-labelledby="home-tab" id="id_body" rows="20">{{ article.body }}</textarea>
                       </div>
-                      <div class="tab-pane fade" id="preview-aritcle" role="tabpanel" aria-labelledby="preview-aritcle-tab"></div>
+                      <div class="tab-pane fade" id="preview-aritcle" role="tabpanel" aria-labelledby="preview-aritcle-tab"><div class="markdown-body"></div></div>
                     </div>
                 </div>
                 <!-- end -->
@@ -79,7 +79,7 @@
                 data: {article_body: body, csrfmiddlewaretoken: '{{ csrf_token }}',},
                 dataType: 'json',
                 success: function(data){
-                    var preview = $('#preview-aritcle')
+                    var preview = $('.markdown-body')
                     preview.text('');
                     preview.append(data.body);
 
