adjust article style

--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -36,8 +36,10 @@
                         <!-- Search start -->
                         <li class="nav-item">
                             <form class="form-inline margin-right">
+                            <small>
                             <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="{% trans 'Search' %}">
                             <button class="btn btn-outline-success my-2 my-sm-0" type="submit">{% trans 'Search' %}</button>
+                            </small>
                             </form>
                         </li>
                         <!-- end -->
