--- a/blog/static/css/index.css
+++ b/blog/static/css/index.css
@@ -59,6 +59,10 @@ main{
     height: 2rem;
     width: 2rem;
 }
+.list-article-image{
+    height: 1rem;
+    width: 1rem;
+}
 .icon-sm{
     height: 1.2rem;
     width: 1.2rem;
