--- a/blog/templates/blog/edit_article.html
+++ b/blog/templates/blog/edit_article.html
@@ -24,9 +24,10 @@
                 <!-- 文章主体 start -->
                 <div class="form-group">
                     <nav>
-                      <div class="nav nav-tabs" id="nav-tab" role="tablist">
+                      <div class="nav nav-tabs justify-content-start" id="nav-tab" role="tablist">
                         <a class="nav-item nav-link active" id="edit-article-tab" data-toggle="tab" href="#edit-article" role="tab" aria-controls="nav-edit-article" aria-selected="true">{% trans 'Edit file' %}</a>
                         <a class="nav-item nav-link" onclick="preview()" id="preview-aritcle-tab" data-toggle="tab" href="#preview-aritcle" role="tab" aria-controls="preview-aritcle" aria-selected="false">{% trans 'Preview' %}</a>
+                        <a class="nav-item ml-auto a-text a-hover" href="#"><small>{% trans 'Support Markdown' %}</small></a>
                       </div>
                     </nav>
                     <div class="tab-content" id="nav-tabContent">
