modify users table and add blog num

--- a/blog/static/css/index.css
+++ b/blog/static/css/index.css
@@ -71,3 +71,10 @@ main{
 .margin-right{
     margin-right: 1rem;
 }
+.inline-dl dl{
+    display: inline-block;
+    width: 21%;
+    text-align: center;
+    margin: 0;
+    padding: 0;
+}
