--- a/blog/templates/blog/article_details.html
+++ b/blog/templates/blog/article_details.html
@@ -95,13 +95,14 @@
         $.ajax({
                 url: '{% url "blog:article_follow" %}',
                 type: 'POST',
-                data: {user: {{ user.id }}, follow: {{ article.author.id }}, csrfmiddlewaretoken: '{{ csrf_token }}'},
+                data: {follow: {{ article.author.id }}, csrfmiddlewaretoken: '{{ csrf_token }}'},
                 dataType: 'json',
                 success: function(data){
-                    data.status && $('#follow').text("{% trans 'Followed' %}")
+                    data.status && $('#follow').text(data.status)
                 },
                 error: function(data){
                     console.log('error');
+                    layer.alert("{% trans 'Please login first!' %}");
                 }
             });
     }
