--- a/blog/templates/blog/article_details.html
+++ b/blog/templates/blog/article_details.html
@@ -102,7 +102,7 @@
                 },
                 error: function(data){
                     console.log('error');
-                    layer.alert("{% trans 'Please login first!' %}");
+                    layer_alert("{% trans 'Please login first!' %}");
                 }
             });
     }
