prepare add tags

--- a/blog/templates/blog/edit_article.html
+++ b/blog/templates/blog/edit_article.html
@@ -54,6 +54,7 @@
                             <!-- 文章标签 -->
                             <div class="form-group row">
                                 <label for="id_tags" class="col-md-2 col-form-label text-center">{% trans 'Tags' %} :</label>
+                                <input type="hidden" name="hideTags" id="hideTags">
                                 <small id="tagsHelpBlock" class="form-text text-muted">
                                     {% trans 'Add 5 tags at most' %}
                                 </small>
