--- a/blog/templates/blog/article_details.html
+++ b/blog/templates/blog/article_details.html
@@ -67,6 +67,11 @@
         <div class="d-flex flex-row">
             <a class="a-hover p-2" href="#">{{ article.category }}</a>
             <span class="p-2">{{ article.created_time }}</span>
+            {% for tag in article.tags|slice:':-1' %}
+            <a class="a-hover p-2" href="#">{{ tag }}</a>
+            <span class="p-2">/</span>
+            {% endfor %}
+            <a class="a-hover p-2" href="#">{{ article.tags|last }}</a>
             <a class="a-hover ml-auto p-2"><img class="icon-sm" src="{% static 'img/svg/eye.svg' %}"> {{ article.page_view }}</a>
             {% if user == article.author %}
             <a class="a-hover p-2" href="{% url 'blog:edit_article' article.id %}">
