--- a/blog/templates/blog/new_article.html
+++ b/blog/templates/blog/new_article.html
@@ -60,12 +60,13 @@
                                     </button>
                                 </div>
                             </div>
-                            <div class="row">
-                                <div class="col-md-2 offset-md-2">
-                                <small id="tagsHelpBlock" class="form-text text-muted">
+                            <div class="form-group row">
+                                <!-- <div class="col-md-2 offset-md-2"> 此处会影响预览的跳转 -->
+                                <div class="col-md-2"></div>
+                                <small id="tagsHelpBlock" class="col-md-2 form-text text-muted">
                                     {% trans 'Add 5 tags at most' %}
                                 </small>
-                                <div>
+                                <!-- <div> -->
                             </div>
                             <!-- end -->
                       </div>
