--- a/blog/templates/blog/edit_article.html
+++ b/blog/templates/blog/edit_article.html
@@ -66,12 +66,13 @@
                                     </button>
                                 </div>
                             </div>
-                            <div class="row">
-                                <div class="col-md-2 offset-md-2">
-                                <small id="tagsHelpBlock" class="form-text text-muted">
+                            <div class="form-group row">
+                                <!-- <div class="col-md-2 offset-md-2"> 此处会影响预览的跳转 -->
+                                <div class="col-md-2"></div>
+                                <small id="tagsHelpBlock" class="col-md-2 form-text text-muted">
                                     {% trans 'Add 5 tags at most' %}
                                 </small>
-                                <div>
+                                <!-- <div> -->
                             </div>
                             <!-- end -->
                       </div>
@@ -109,6 +110,7 @@
         window.onload = function(){
             $('.span-tag').length > 4 && $('#addTag').hide();
         }
+
     </script>
     <script src="{% static 'js/edit_article.js' %}"></script>
 {% endblock content %}
