--- a/blog/static/css/edit_article.css
+++ b/blog/static/css/edit_article.css
@@ -37,7 +37,7 @@
   max-width: 480px;
   background: #c0bdbd;
   border-radius: 2px;
-  /*height: 21px;*/
+  height: 21px;
   color: #4f4f4f;
   overflow: hidden;
   text-align: center;
