--- a/blog/static/css/index.css
+++ b/blog/static/css/index.css
@@ -78,3 +78,20 @@ main{
     margin: 0;
     padding: 0;
 }
+.icon-tool{
+    height: 2rem;
+    width: 2rem;
+}
+.tool-ul{
+    list-style: none;
+    padding-left: 0;
+}
+.tool-ul > li{
+    margin-bottom: 4px; 
+    border-radius: 4px; background-color: #fff;
+} 
+.webicon{
+    width: 32px;
+    height: 32px;
+    background: url('../img/svg/chatbox.svg');
+}
